--- a/catalog.html
+++ b/catalog.html
@@ -14,13 +14,13 @@
       <nav class="main-navigation">
         <a href="index.html"><img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона" class="logo-image"></a>
         <ul class="site-navigation list-style-none">
-          <li><a href="info.html">Информация</a></li>
-          <li><a href="galery.html">Фото и Видео</a></li>
-          <li><a href="map.html">Карта штата</a></li>
-          <li><a>Гостиницы</a></li>
+          <li><a href="#">Информация</a></li>
+          <li><a href="#">Фото и Видео</a></li>
+          <li><a href="#">Карта штата</a></li>
+          <li><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </nav>
-      
+
     </header>
     <!--/Шапка страницы-->
 
@@ -106,7 +106,7 @@
             </a>
           </li>
         </ul>
-      </section>  
+      </section>
   <!-- /результаты поиска -->
 
   <!--список отелей-->
@@ -128,7 +128,7 @@
             </div>
           </div>
           <div class="rating">
-            <span class="four-stars"></span> 
+            <span class="four-stars"></span>
             <p>Рейтинг 8,5</p>
           </div>
 
@@ -150,7 +150,7 @@
             </div>
           </div>
           <div class="rating">
-            <span class="three-stars"></span> 
+            <span class="three-stars"></span>
             <p>Рейтинг 8,9</p>
           </div>
         </article>
@@ -171,7 +171,7 @@
             </div>
           </div>
           <div class="rating">
-            <span class="two-stars"></span> 
+            <span class="two-stars"></span>
             <p>Рейтинг 9,2</p>
           </div>
         </article>
